--- a/.github/workflows/deploy-build.yml
+++ b/.github/workflows/deploy-build.yml
@@ -5,7 +5,7 @@ on:
       - master
 jobs:
   build:
-  runs-on: ubuntu-latest
+  runs-on: Linux
   steps:
     - name: Checkout
       use: actions/checkout@v2
