added yml file for CI/CD

--- a/.github/workflows/deploy-build.yml
+++ b/.github/workflows/deploy-build.yml
@@ -1,19 +1,25 @@
 name: build and deploy to AWS EC2
+
 on:
   push:
     branches:
       - master
+
 jobs:
   build:
-  runs-on: Linux
-  steps:
-    - name: Checkout
-      use: actions/checkout@v2
-    - name: Install Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: "20"
-    - name: Install dependencies
-      run: npm install
-    - name: Build application
-      run: npm run build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2 # 'uses' instead of 'use'
+
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "20"
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build application
+        run: npm run build
