--- a/.github/workflows/deploy-build.yml
+++ b/.github/workflows/deploy-build.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Build application
         run: npm run build
 
+      - name: Verify build directory
+        run: ls -R build
+
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
