--- a/.github/workflows/deploy-build.yml
+++ b/.github/workflows/deploy-build.yml
@@ -56,6 +56,7 @@ jobs:
           target: /app/
           source: ./dist_old/*
           debug: true # Enable detailed debugging logs
+          tar: false
 
       - name: Restart application on EC2
         uses: appleboy/ssh-action@v0.1.6
