--- a/.github/workflows/deploy-build.yml
+++ b/.github/workflows/deploy-build.yml
@@ -24,6 +24,15 @@ jobs:
       - name: Build application
         run: "npm run build"
 
+      - name: Create .env file
+        run: |
+          echo "PORT=${{ secrets.PORT }}" >> dist_old/.env
+          echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> dist_old/.env
+          echo "SECRET=${{ secrets.SECRET }}" >> dist_old/.env
+
+      - name: Copy package.json to build folder
+        run: cp package.json dist_old/
+
       - name: Verify build directory
         run: ls -R
 
@@ -33,55 +42,49 @@ jobs:
           name: artifact
           path: dist_old/
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
+ deploy:
+  runs-on: ubuntu-latest
+  needs: build
 
-    steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: artifact
-          path: dist_old/
+  steps:
+    - name: Download artifact
+      uses: actions/download-artifact@v3
+      with:
+        name: artifact
+        path: dist_old/
 
-      - name: Verify artifact content
-        run: ls -la ./dist_old/
+    - name: Verify artifact content
+      run: ls -la ./dist_old/
 
-      - name: Copy files to EC2
-        uses: appleboy/scp-action@v0.1.7
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_PRIVATE_KEY }}
-          target: /app/
-          source: ./dist_old/*
-          debug: true # Enable detailed debugging logs
-          tar: false
+    - name: Copy files to EC2
+      uses: appleboy/scp-action@v0.1.7
+      with:
+        host: ${{ secrets.EC2_HOST }}
+        username: ${{ secrets.EC2_USER }}
+        key: ${{ secrets.EC2_PRIVATE_KEY }}
+        target: /app/
+        source: ./dist_old/*
+        debug: true
+        tar: false
 
-      - name: Restart application on EC2
-        uses: appleboy/ssh-action@v0.1.6
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_PRIVATE_KEY }}
-          script: |
-            mkdir -p /app/  
-            cd /app/
-            # Install Node.js and npm if not available
-            if ! command -v node &> /dev/null; then
+    - name: Install Node.js and Restart App
+      uses: appleboy/ssh-action@v0.1.6
+      with:
+        host: ${{ secrets.EC2_HOST }}
+        username: ${{ secrets.EC2_USER }}
+        key: ${{ secrets.EC2_PRIVATE_KEY }}
+        script: |
+          cd /app/
+          # Install Node.js if not already installed
+          if ! command -v node &> /dev/null; then
             echo "Node.js not found, installing..."
-            curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.3/install.sh | bash
-            source ~/.bashrc
-            nvm install --lts
-            fi
-            if ! command -v npm &> /dev/null; then
-            echo "npm not found, please check Node.js installation."
-            exit 1
-            fi
-            # Install PM2 if not available
-            if ! command -v pm2 &> /dev/null; then
+            curl -fsSL https://deb.nodesource.com/setup_20.x | sudo -E bash -
+            sudo apt-get install -y nodejs
+          fi
+          # Ensure PM2 is available
+          if ! command -v pm2 &> /dev/null; then
             echo "PM2 not found, installing..."
             npm install -g pm2
-            fi
-            # Restart or start the application
-            pm2 restart all || pm2 start dist_old/index.js --name "my-app"
+          fi
+          # Restart or start the app
+          pm2 restart all || pm2 start dist_old/index.js --name "my-app"
