--- a/.github/workflows/deploy-build.yml
+++ b/.github/workflows/deploy-build.yml
@@ -87,7 +87,7 @@ jobs:
           # Ensure PM2 is available
           if ! command -v pm2 &> /dev/null; then
           echo "PM2 not found, installing..."
-          npm install -g pm2
+          sudo npm install -g pm2
           fi
           # Restart or start the app
           pm2 restart all || pm2 start dist_old/index.js --name "my-app"
