--- a/.github/workflows/deploy-build.yml
+++ b/.github/workflows/deploy-build.yml
@@ -24,6 +24,9 @@ jobs:
     - name: Build application
       run: "npm run build"
 
+    - name: Create dist_old directory if it doesn't exist
+      run: mkdir -p dist_old
+
     - name: Create .env file
       run: |
         echo "PORT=${{ secrets.PORT }}" >> dist_old/.env
