--- a/.github/workflows/deploy-build.yml
+++ b/.github/workflows/deploy-build.yml
@@ -32,9 +32,9 @@ jobs:
 
       - name: Create .env file
         run: |
-          cp "PORT=${{ secrets.PORT }}" >> dist/.env
-          cp "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> dist/.env
-          cp "SECRET=${{ secrets.SECRET }}" >> dist/.env
+          echo "PORT=${{ secrets.PORT }}" >> dist/.env
+          echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> dist/.env
+          echo "SECRET=${{ secrets.SECRET }}" >> dist/.env
 
       - name: Verify .env content
         run: cat dist/.env
