--- a/.github/workflows/deploy-build.yml
+++ b/.github/workflows/deploy-build.yml
@@ -83,6 +83,16 @@ jobs:
       - name: Verify artifact content
         run: ls -la ./dist/
 
+      - name: Create Target Directory on EC2
+        uses: appleboy/ssh-action@v0.1.6
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_PRIVATE_KEY }}
+          script: |
+            sudo mkdir -p /var/www/myApps
+            sudo chown $USER:$USER /var/www/myApps
+
       - name: Copy files to EC2
         uses: appleboy/scp-action@v0.1.7
         with:
