--- a/.github/workflows/deploy-build.yml
+++ b/.github/workflows/deploy-build.yml
@@ -129,4 +129,4 @@ jobs:
             sudo npm install -g pm2
             fi
             # Restart or start the app
-            pm2 restart all || pm2 start www/myApps/dist/index.js --name "my-app"
+            pm2 restart all || pm2 start var/www/myApps/dist/index.js --name "my-app"
